add msa info to info_table

--- a/viral_spectra/prepare_table_of_vir_info.ipynb
+++ b/viral_spectra/prepare_table_of_vir_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "dddf8e37",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "4ea92a90",
    "metadata": {},
    "outputs": [],
@@ -72,6 +72,7 @@
     "host_gene = pd.read_csv('data/virus_taxid_host_gene.csv')\n",
     "vir_type = pd.read_csv('data/taxid_virus_type.csv', index_col=0)\n",
     "linages = pd.read_csv('data/vir_linages.csv')\n",
+    "seq_cnt = pd.read_csv('data/nemu_inputs/seq_cnt.csv') # 3052310(11620),156,7587\n",
     "\n",
     "# vir_type['taxid'] = vir_type['taxid'].astype(int)"
    ]
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "dfeba0ea",
    "metadata": {},
    "outputs": [
@@ -142,6 +143,8 @@
        "      <th>kingdom</th>\n",
        "      <th>superkingdom</th>\n",
        "      <th>Nucleotide_Count</th>\n",
+       "      <th>sequences</th>\n",
+       "      <th>nucleotide_sites</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -161,6 +164,8 @@
        "      <td>Orthornavirae__2732396</td>\n",
        "      <td>Viruses__10239</td>\n",
        "      <td>4363.0</td>\n",
+       "      <td>199.0</td>\n",
+       "      <td>4011.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -178,6 +183,8 @@
        "      <td>Orthornavirae__2732396</td>\n",
        "      <td>Viruses__10239</td>\n",
        "      <td>2478.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>4049.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -195,6 +202,8 @@
        "      <td>Orthornavirae__2732396</td>\n",
        "      <td>Viruses__10239</td>\n",
        "      <td>2366.0</td>\n",
+       "      <td>161.0</td>\n",
+       "      <td>3968.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -212,6 +221,8 @@
        "      <td>Orthornavirae__2732396</td>\n",
        "      <td>Viruses__10239</td>\n",
        "      <td>1773.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -229,6 +240,8 @@
        "      <td>Orthornavirae__2732396</td>\n",
        "      <td>Viruses__10239</td>\n",
        "      <td>1149.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>4395.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -256,37 +269,46 @@
        "3  Reovirales__2732541  Resentoviricetes__2732459  Duplornaviricota__2732405   \n",
        "4  Reovirales__2732541  Resentoviricetes__2732459  Duplornaviricota__2732405   \n",
        "\n",
-       "                  kingdom    superkingdom  Nucleotide_Count  \n",
-       "0  Orthornavirae__2732396  Viruses__10239            4363.0  \n",
-       "1  Orthornavirae__2732396  Viruses__10239            2478.0  \n",
-       "2  Orthornavirae__2732396  Viruses__10239            2366.0  \n",
-       "3  Orthornavirae__2732396  Viruses__10239            1773.0  \n",
-       "4  Orthornavirae__2732396  Viruses__10239            1149.0  "
+       "                  kingdom    superkingdom  Nucleotide_Count  sequences  \\\n",
+       "0  Orthornavirae__2732396  Viruses__10239            4363.0      199.0   \n",
+       "1  Orthornavirae__2732396  Viruses__10239            2478.0       79.0   \n",
+       "2  Orthornavirae__2732396  Viruses__10239            2366.0      161.0   \n",
+       "3  Orthornavirae__2732396  Viruses__10239            1773.0        NaN   \n",
+       "4  Orthornavirae__2732396  Viruses__10239            1149.0      123.0   \n",
+       "\n",
+       "   nucleotide_sites  \n",
+       "0            4011.0  \n",
+       "1            4049.0  \n",
+       "2            3968.0  \n",
+       "3               NaN  \n",
+       "4            4395.0  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_df = vir_type[vir_type.taxid.isin(raw_spectra.taxid.unique())].merge(linages, how='left')\n",
+    "final_df = vir_type[vir_type.taxid.isin(raw_spectra.taxid.unique())]\\\n",
+    "    .merge(linages, how='left')\\\n",
+    "        .merge(seq_cnt, how='left', on='taxid')\n",
     "final_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "9c2b0718",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(32, 14)"
+       "(32, 16)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "id": "64a32515",
    "metadata": {},
    "outputs": [
@@ -336,6 +358,8 @@
        "      <th>kingdom</th>\n",
        "      <th>superkingdom</th>\n",
        "      <th>Nucleotide_Count</th>\n",
+       "      <th>sequences</th>\n",
+       "      <th>nucleotide_sites</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -355,6 +379,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>6471.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -372,6 +398,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>472.0</td>\n",
+       "      <td>6760.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -381,6 +409,8 @@
        "      <td>NaN</td>\n",
        "      <td>OldTaxid:12331</td>\n",
        "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -406,6 +436,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>4221.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
@@ -423,6 +455,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>8551.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -443,15 +477,15 @@
        "14    M polyprotein   OldTaxid:2560743    -   NaN    NaN   NaN   NaN    NaN   \n",
        "28     polyprotein    OldTaxid:1985356    +   NaN    NaN   NaN   NaN    NaN   \n",
        "\n",
-       "   kingdom superkingdom  Nucleotide_Count  \n",
-       "9      NaN          NaN               NaN  \n",
-       "10     NaN          NaN               NaN  \n",
-       "11     NaN          NaN               NaN  \n",
-       "14     NaN          NaN               NaN  \n",
-       "28     NaN          NaN               NaN  "
+       "   kingdom superkingdom  Nucleotide_Count  sequences  nucleotide_sites  \n",
+       "9      NaN          NaN               NaN      114.0            6471.0  \n",
+       "10     NaN          NaN               NaN      472.0            6760.0  \n",
+       "11     NaN          NaN               NaN        NaN               NaN  \n",
+       "14     NaN          NaN               NaN      118.0            4221.0  \n",
+       "28     NaN          NaN               NaN       95.0            8551.0  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "id": "c3ce2813",
    "metadata": {},
    "outputs": [],
@@ -473,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "id": "2be65177",
    "metadata": {},
    "outputs": [],
@@ -483,11 +517,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2a3363c8",
+   "execution_count": 16,
+   "id": "d5616bae",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mut</th>\n",
+       "      <th>ObsNum</th>\n",
+       "      <th>ExpNum</th>\n",
+       "      <th>MutSpec</th>\n",
+       "      <th>MutSpec_q05</th>\n",
+       "      <th>MutSpec_median</th>\n",
+       "      <th>MutSpec_q95</th>\n",
+       "      <th>taxid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A&gt;C</td>\n",
+       "      <td>222.1000</td>\n",
+       "      <td>109.4550</td>\n",
+       "      <td>0.109127</td>\n",
+       "      <td>0.098138</td>\n",
+       "      <td>0.109519</td>\n",
+       "      <td>0.118038</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A&gt;G</td>\n",
+       "      <td>348.5810</td>\n",
+       "      <td>159.7600</td>\n",
+       "      <td>0.117342</td>\n",
+       "      <td>0.109575</td>\n",
+       "      <td>0.117365</td>\n",
+       "      <td>0.127528</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A&gt;T</td>\n",
+       "      <td>114.4490</td>\n",
+       "      <td>83.7826</td>\n",
+       "      <td>0.073464</td>\n",
+       "      <td>0.061877</td>\n",
+       "      <td>0.074088</td>\n",
+       "      <td>0.084475</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C&gt;A</td>\n",
+       "      <td>172.6090</td>\n",
+       "      <td>154.1570</td>\n",
+       "      <td>0.060217</td>\n",
+       "      <td>0.053061</td>\n",
+       "      <td>0.060244</td>\n",
+       "      <td>0.065731</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>C&gt;G</td>\n",
+       "      <td>28.6549</td>\n",
+       "      <td>131.8260</td>\n",
+       "      <td>0.011690</td>\n",
+       "      <td>0.009010</td>\n",
+       "      <td>0.012031</td>\n",
+       "      <td>0.014995</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>C&gt;T</td>\n",
+       "      <td>716.8470</td>\n",
+       "      <td>257.9570</td>\n",
+       "      <td>0.149450</td>\n",
+       "      <td>0.142104</td>\n",
+       "      <td>0.150746</td>\n",
+       "      <td>0.158789</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>G&gt;A</td>\n",
+       "      <td>523.6170</td>\n",
+       "      <td>143.1970</td>\n",
+       "      <td>0.196651</td>\n",
+       "      <td>0.184005</td>\n",
+       "      <td>0.195787</td>\n",
+       "      <td>0.209227</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>G&gt;C</td>\n",
+       "      <td>41.0114</td>\n",
+       "      <td>81.7845</td>\n",
+       "      <td>0.026968</td>\n",
+       "      <td>0.020393</td>\n",
+       "      <td>0.027325</td>\n",
+       "      <td>0.032978</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>G&gt;T</td>\n",
+       "      <td>31.5994</td>\n",
+       "      <td>81.7845</td>\n",
+       "      <td>0.020779</td>\n",
+       "      <td>0.015946</td>\n",
+       "      <td>0.020455</td>\n",
+       "      <td>0.026900</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>T&gt;A</td>\n",
+       "      <td>106.6500</td>\n",
+       "      <td>155.3000</td>\n",
+       "      <td>0.036932</td>\n",
+       "      <td>0.030765</td>\n",
+       "      <td>0.036855</td>\n",
+       "      <td>0.041759</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>T&gt;C</td>\n",
+       "      <td>720.9330</td>\n",
+       "      <td>292.7810</td>\n",
+       "      <td>0.132424</td>\n",
+       "      <td>0.123637</td>\n",
+       "      <td>0.132099</td>\n",
+       "      <td>0.139664</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>T&gt;G</td>\n",
+       "      <td>168.3510</td>\n",
+       "      <td>139.3820</td>\n",
+       "      <td>0.064957</td>\n",
+       "      <td>0.057968</td>\n",
+       "      <td>0.065266</td>\n",
+       "      <td>0.073655</td>\n",
+       "      <td>10407</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Mut    ObsNum    ExpNum   MutSpec  MutSpec_q05  MutSpec_median  \\\n",
+       "0   A>C  222.1000  109.4550  0.109127     0.098138        0.109519   \n",
+       "1   A>G  348.5810  159.7600  0.117342     0.109575        0.117365   \n",
+       "2   A>T  114.4490   83.7826  0.073464     0.061877        0.074088   \n",
+       "3   C>A  172.6090  154.1570  0.060217     0.053061        0.060244   \n",
+       "4   C>G   28.6549  131.8260  0.011690     0.009010        0.012031   \n",
+       "5   C>T  716.8470  257.9570  0.149450     0.142104        0.150746   \n",
+       "6   G>A  523.6170  143.1970  0.196651     0.184005        0.195787   \n",
+       "7   G>C   41.0114   81.7845  0.026968     0.020393        0.027325   \n",
+       "8   G>T   31.5994   81.7845  0.020779     0.015946        0.020455   \n",
+       "9   T>A  106.6500  155.3000  0.036932     0.030765        0.036855   \n",
+       "10  T>C  720.9330  292.7810  0.132424     0.123637        0.132099   \n",
+       "11  T>G  168.3510  139.3820  0.064957     0.057968        0.065266   \n",
+       "\n",
+       "    MutSpec_q95  taxid  \n",
+       "0      0.118038  10407  \n",
+       "1      0.127528  10407  \n",
+       "2      0.084475  10407  \n",
+       "3      0.065731  10407  \n",
+       "4      0.014995  10407  \n",
+       "5      0.158789  10407  \n",
+       "6      0.209227  10407  \n",
+       "7      0.032978  10407  \n",
+       "8      0.026900  10407  \n",
+       "9      0.041759  10407  \n",
+       "10     0.139664  10407  \n",
+       "11     0.073655  10407  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_spectra.query('taxid == 10407')"
+   ]
   }
  ],
  "metadata": {
