--- a/viral_spectra/derive_loosers_gainers.ipynb
+++ b/viral_spectra/derive_loosers_gainers.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "185d00a9",
    "metadata": {},
    "outputs": [
@@ -327,9 +327,9 @@
     "for tax in spectra.dropna(subset='family').family.unique():\n",
     "    ms = spectra[spectra.family == tax].iloc[:, :12]\n",
     "    if len(ms) > 1:\n",
-    "        cossim = pdist(ms, 'cosine')\n",
+    "        cossim = 1-pdist(ms, 'cosine')\n",
     "        cossim_mean = cossim.mean()\n",
-    "        print(f\"{tax}:\\t{cossim_mean:.3f}\\t{(1-cossim).round(2)}\")\n",
+    "        print(f\"{tax}:\\t{cossim_mean:.3f}\\t{(cossim).round(2)}\")\n",
     "    else:\n",
     "        print(tax)\n"
    ]
@@ -2435,7 +2435,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_bio",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2449,7 +2449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
