--- a/viral_spectra/get_plot_ms12grouped_all_viruses.ipynb
+++ b/viral_spectra/get_plot_ms12grouped_all_viruses.ipynb
@@ -1649,7 +1649,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv_bio",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1663,7 +1663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
