updated several images for 1 and 3 images and suppls

--- a/viral_spectra/spectra_eda_plus_eq_freq_be.ipynb
+++ b/viral_spectra/spectra_eda_plus_eq_freq_be.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "45baf47d",
    "metadata": {},
    "outputs": [
@@ -534,8 +534,8 @@
        "      <th></th>\n",
        "      <th>aa</th>\n",
        "      <th>eq_freq</th>\n",
+       "      <th>taxid</th>\n",
        "      <th>virusname</th>\n",
-       "      <th>taxname</th>\n",
        "      <th>sense</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -544,40 +544,40 @@
        "      <th>0</th>\n",
        "      <td>Arg</td>\n",
        "      <td>0.122635</td>\n",
+       "      <td>3052230</td>\n",
        "      <td>HCV</td>\n",
-       "      <td>Hepacivirus hominis</td>\n",
        "      <td>+ssRNA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Pro</td>\n",
        "      <td>0.095629</td>\n",
+       "      <td>3052230</td>\n",
        "      <td>HCV</td>\n",
-       "      <td>Hepacivirus hominis</td>\n",
        "      <td>+ssRNA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Ser</td>\n",
        "      <td>0.095571</td>\n",
+       "      <td>3052230</td>\n",
        "      <td>HCV</td>\n",
-       "      <td>Hepacivirus hominis</td>\n",
        "      <td>+ssRNA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Ala</td>\n",
        "      <td>0.093153</td>\n",
+       "      <td>3052230</td>\n",
        "      <td>HCV</td>\n",
-       "      <td>Hepacivirus hominis</td>\n",
        "      <td>+ssRNA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Gly</td>\n",
        "      <td>0.090677</td>\n",
+       "      <td>3052230</td>\n",
        "      <td>HCV</td>\n",
-       "      <td>Hepacivirus hominis</td>\n",
        "      <td>+ssRNA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -592,7 +592,7 @@
        "      <th>695</th>\n",
        "      <td>Lys</td>\n",
        "      <td>0.013792</td>\n",
-       "      <td>RBSDV</td>\n",
+       "      <td>10990</td>\n",
        "      <td>RBSDV</td>\n",
        "      <td>dsRNA</td>\n",
        "    </tr>\n",
@@ -600,7 +600,7 @@
        "      <th>696</th>\n",
        "      <td>Gly</td>\n",
        "      <td>0.012196</td>\n",
-       "      <td>RBSDV</td>\n",
+       "      <td>10990</td>\n",
        "      <td>RBSDV</td>\n",
        "      <td>dsRNA</td>\n",
        "    </tr>\n",
@@ -608,7 +608,7 @@
        "      <th>697</th>\n",
        "      <td>Met</td>\n",
        "      <td>0.011718</td>\n",
-       "      <td>RBSDV</td>\n",
+       "      <td>10990</td>\n",
        "      <td>RBSDV</td>\n",
        "      <td>dsRNA</td>\n",
        "    </tr>\n",
@@ -616,7 +616,7 @@
        "      <th>698</th>\n",
        "      <td>Glu</td>\n",
        "      <td>0.007543</td>\n",
-       "      <td>RBSDV</td>\n",
+       "      <td>10990</td>\n",
        "      <td>RBSDV</td>\n",
        "      <td>dsRNA</td>\n",
        "    </tr>\n",
@@ -624,7 +624,7 @@
        "      <th>699</th>\n",
        "      <td>Trp</td>\n",
        "      <td>0.006091</td>\n",
-       "      <td>RBSDV</td>\n",
+       "      <td>10990</td>\n",
        "      <td>RBSDV</td>\n",
        "      <td>dsRNA</td>\n",
        "    </tr>\n",
@@ -634,23 +634,23 @@
        "</div>"
       ],
       "text/plain": [
-       "      aa   eq_freq virusname              taxname   sense\n",
-       "0    Arg  0.122635       HCV  Hepacivirus hominis  +ssRNA\n",
-       "1    Pro  0.095629       HCV  Hepacivirus hominis  +ssRNA\n",
-       "2    Ser  0.095571       HCV  Hepacivirus hominis  +ssRNA\n",
-       "3    Ala  0.093153       HCV  Hepacivirus hominis  +ssRNA\n",
-       "4    Gly  0.090677       HCV  Hepacivirus hominis  +ssRNA\n",
-       "..   ...       ...       ...                  ...     ...\n",
-       "695  Lys  0.013792     RBSDV                RBSDV   dsRNA\n",
-       "696  Gly  0.012196     RBSDV                RBSDV   dsRNA\n",
-       "697  Met  0.011718     RBSDV                RBSDV   dsRNA\n",
-       "698  Glu  0.007543     RBSDV                RBSDV   dsRNA\n",
-       "699  Trp  0.006091     RBSDV                RBSDV   dsRNA\n",
+       "      aa   eq_freq    taxid virusname   sense\n",
+       "0    Arg  0.122635  3052230       HCV  +ssRNA\n",
+       "1    Pro  0.095629  3052230       HCV  +ssRNA\n",
+       "2    Ser  0.095571  3052230       HCV  +ssRNA\n",
+       "3    Ala  0.093153  3052230       HCV  +ssRNA\n",
+       "4    Gly  0.090677  3052230       HCV  +ssRNA\n",
+       "..   ...       ...      ...       ...     ...\n",
+       "695  Lys  0.013792    10990     RBSDV   dsRNA\n",
+       "696  Gly  0.012196    10990     RBSDV   dsRNA\n",
+       "697  Met  0.011718    10990     RBSDV   dsRNA\n",
+       "698  Glu  0.007543    10990     RBSDV   dsRNA\n",
+       "699  Trp  0.006091    10990     RBSDV   dsRNA\n",
        "\n",
        "[700 rows x 5 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,11 +665,12 @@
     "    virusname = spectra.iloc[i]['virusname']\n",
     "    taxname = spectra.iloc[i]['taxname']\n",
     "    sense = spectra.iloc[i]['Type']\n",
+    "    taxid = spectra.iloc[i]['taxid']\n",
     "\n",
     "    eq_freqs_cdn, eq_freqc_aa = get_equilibrium_freqs(ms12, 'rate', gc=1)\n",
     "    \n",
     "\n",
-    "    eq_freq.append(eq_freqc_aa.assign(virusname=virusname, taxname=taxname, sense=sense))\n",
+    "    eq_freq.append(eq_freqc_aa.assign(taxid=taxid, virusname=virusname, sense=sense))\n",
     "\n",
     "eq_freq_df = pd.concat(eq_freq, ignore_index=True)\n",
     "eq_freq_df['sense'] = eq_freq_df['sense'].map({\n",
@@ -680,12 +681,14 @@
     "eq_freq_df.loc[eq_freq_df['virusname'].isin(\n",
     "    ['CoV20A', 'CoV22C', 'PEDV', 'alCoV1', 'ACoV ']), 'sense'] = \\\n",
     "    ['+ssRNA (Cov)']*5*20\n",
+    "\n",
+    "eq_freq_df.to_csv('./data/eq_freq_viral_groups_boxplot.csv', index=False)\n",
     "eq_freq_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "id": "117a86cc",
    "metadata": {},
    "outputs": [
@@ -720,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "id": "2a9d7602",
    "metadata": {},
    "outputs": [
