fixed dublicates in aa_fitness analysis (subset_of_ORF1ab)

--- a/1sars-cov-2/1Neutral_scenario.ipynb
+++ b/1sars-cov-2/1Neutral_scenario.ipynb
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2bad06d9",
    "metadata": {},
    "outputs": [
@@ -1885,7 +1885,7 @@
     "ax=sns.barplot(eq_freqc_aa, x='aa', y='obs_freq', color='lightgreen', edgecolor='green', \n",
     "               width=0.4, alpha=0.7, label='Observed')\n",
     "\n",
-    "plt.ylabel('Equilibrium frequency', fontsize=13)\n",
+    "plt.ylabel('Frequency', fontsize=13)\n",
     "plt.xticks(fontsize=12)\n",
     "plt.xlabel('')\n",
     "plt.grid(axis='y')\n",
