--- a/2other_viruses/2get_plot_ms12grouped_all_viruses.ipynb
+++ b/2other_viruses/2get_plot_ms12grouped_all_viruses.ipynb
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "343d1cd9-764e-4d4c-a847-2064f452a8b4",
    "metadata": {},
    "outputs": [],
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "3f036cbb-d159-4e91-ad66-dc57766ed799",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1324,7 @@
        "array(['PEDV', 'alCoV1', 'ACoV ', 'CoV20A', 'CoV22C'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "4348b47b-7d8f-4446-b288-8bd4d580e34a",
    "metadata": {},
    "outputs": [
@@ -1504,7 +1504,7 @@
        "[420 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "ab0253c6",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1534,7 @@
        "Series([], Name: MutSpec, dtype: float64)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "1f7cf7a2",
    "metadata": {},
    "outputs": [
@@ -1553,7 +1553,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/kpotoh/.virtualenvs/env_bio/lib/python3.12/site-packages/scipy/spatial/distance.py:682: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "/home/kpotoh/.pyenv/venv_bio/lib64/python3.14/site-packages/scipy/spatial/distance.py:682: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  dist = 1.0 - uv / math.sqrt(uu * vv)\n"
      ]
     },
@@ -1563,7 +1563,7 @@
        "np.float64(nan)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "5568cf67",
    "metadata": {},
    "outputs": [
@@ -1934,7 +1934,7 @@
        "0        dsDNA (7)  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2260,11 +2260,161 @@
     "\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "190eb229",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>aa</th>\n",
+       "      <th>eq_freq</th>\n",
+       "      <th>group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Leu</td>\n",
+       "      <td>0.122447</td>\n",
+       "      <td>+ssRNA (14)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ser</td>\n",
+       "      <td>0.107977</td>\n",
+       "      <td>+ssRNA (14)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arg</td>\n",
+       "      <td>0.081763</td>\n",
+       "      <td>+ssRNA (14)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Val</td>\n",
+       "      <td>0.071469</td>\n",
+       "      <td>+ssRNA (14)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pro</td>\n",
+       "      <td>0.063813</td>\n",
+       "      <td>+ssRNA (14)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>Lys</td>\n",
+       "      <td>0.025337</td>\n",
+       "      <td>dsDNA (7)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>Gln</td>\n",
+       "      <td>0.025250</td>\n",
+       "      <td>dsDNA (7)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>Glu</td>\n",
+       "      <td>0.020068</td>\n",
+       "      <td>dsDNA (7)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>Met</td>\n",
+       "      <td>0.015907</td>\n",
+       "      <td>dsDNA (7)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>Trp</td>\n",
+       "      <td>0.012612</td>\n",
+       "      <td>dsDNA (7)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>80 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     aa   eq_freq        group\n",
+       "0   Leu  0.122447  +ssRNA (14)\n",
+       "1   Ser  0.107977  +ssRNA (14)\n",
+       "2   Arg  0.081763  +ssRNA (14)\n",
+       "3   Val  0.071469  +ssRNA (14)\n",
+       "4   Pro  0.063813  +ssRNA (14)\n",
+       "..  ...       ...          ...\n",
+       "75  Lys  0.025337    dsDNA (7)\n",
+       "76  Gln  0.025250    dsDNA (7)\n",
+       "77  Glu  0.020068    dsDNA (7)\n",
+       "78  Met  0.015907    dsDNA (7)\n",
+       "79  Trp  0.012612    dsDNA (7)\n",
+       "\n",
+       "[80 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calc eq freqs of mean spectra\n",
+    "from utils import get_equilibrium_freqs\n",
+    "\n",
+    "data = []\n",
+    "gr_mean_ms = df_long.groupby(['group','Mutation']).MutSpec.mean()\n",
+    "for g in gr_mean_ms.index.get_level_values('group').unique():\n",
+    "    ms = gr_mean_ms.loc[g].reset_index().rename(columns={'Mutation': 'Mut'})\n",
+    "    _, eq_freqs = get_equilibrium_freqs(ms)\n",
+    "    data.append(eq_freqs.assign(group=g))\n",
+    "\n",
+    "df_eq = pd.concat(data, ignore_index=True)\n",
+    "df_eq.to_csv('data/mean_gr_eq_freq.csv', index=False)\n",
+    "df_eq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ffb012f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_bio",
+   "display_name": "venv_bio",
    "language": "python",
    "name": "python3"
   },
@@ -2278,7 +2428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.14.0"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
