--- a/2other_viruses/2get_plot_ms12grouped_all_viruses.ipynb
+++ b/2other_viruses/2get_plot_ms12grouped_all_viruses.ipynb
@@ -1553,7 +1553,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/kpotoh/.pyenv/venv_bio/lib64/python3.14/site-packages/scipy/spatial/distance.py:682: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "/home/kpotoh/.virtualenvs/env_bio/lib/python3.12/site-packages/scipy/spatial/distance.py:682: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  dist = 1.0 - uv / math.sqrt(uu * vv)\n"
      ]
     },
@@ -2026,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "ca65c830",
    "metadata": {},
    "outputs": [
@@ -2046,17 +2046,17 @@
     "\n",
     "sns.set_palette(sns.color_palette(['red', 'green', 'orange','blue']))\n",
     "\n",
-    "_ = df_long.copy()\n",
-    "_['group'] = _['group'].map({\n",
+    "_df = df_long.copy()\n",
+    "_df['group'] = _df['group'].map({\n",
     "    '+ssRNA (4 CoV)': 'оцРНК(+) CoV (4)',\n",
     "    '+ssRNA (14)': 'оцРНК(+) (14)',\n",
     "    'dsDNA (7)': 'дцРНК (7)',\n",
     "    '-ssRNA (11)': 'оцРНК(−) (11)'\n",
     "})\n",
-    "_['Mutation'] = _['Mutation'].apply(lambda x: x.replace('T', 'U'))\n",
+    "_df['Mutation'] = _df['Mutation'].apply(lambda x: x.replace('T', 'U'))\n",
     "\n",
     "sns.boxplot(\n",
-    "    data=_, x='Mutation', y='MutSpec', hue='group', \n",
+    "    data=_df, x='Mutation', y='MutSpec', hue='group', \n",
     "    hue_order=['оцРНК(+) CoV (4)', 'оцРНК(+) (14)', 'дцРНК (7)', 'оцРНК(−) (11)'],\n",
     "    order=['C>U', 'G>A', 'A>G', 'U>C', 'A>C', 'U>G', 'C>A', 'G>U', 'A>U', 'U>A', 'C>G', 'G>C'],\n",
     "\n",
@@ -2069,6 +2069,37 @@
     "plt.grid(linestyle='--', alpha=0.4)\n",
     "\n",
     "# plt.savefig('../viral_spectra/figures/ms12grouped_all_viruses.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c4825005",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A>C:\tds vs +:\t p-value=3.357e-02\n",
+      "A>C:\tds vs -:\t p-value=4.720e-02\n",
+      "C>A:\t+ vs -:\t p-value=2.222e-02\n",
+      "G>A:\tds vs +:\t p-value=4.148e-02\n",
+      "G>A:\t+ vs -:\t p-value=9.120e-04\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "for _, gr in _df.groupby('Mutation'):\n",
+    "    for (sense1, sense2) in combinations(gr.Type.unique(), 2):\n",
+    "        data1 = gr[gr.Type == sense1].MutSpec\n",
+    "        data2 = gr[gr.Type == sense2].MutSpec\n",
+    "        from scipy.stats import mannwhitneyu\n",
+    "        stat, pvalue = mannwhitneyu(data1, data2, alternative='two-sided')\n",
+    "        p_adj = pvalue * 6  # Bonferroni correction for 6 comparisons\n",
+    "        if p_adj < 0.05:\n",
+    "            print(f\"{gr.Mutation.values[0]}:\\t{sense1} vs {sense2}:\\t p-value={p_adj:.3e}\")"
    ]
   },
   {
@@ -2414,7 +2445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_bio",
+   "display_name": "env_bio",
    "language": "python",
    "name": "python3"
   },
@@ -2428,7 +2459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
