--- a/1sars-cov-2/1Neutral_scenario.ipynb
+++ b/1sars-cov-2/1Neutral_scenario.ipynb
@@ -3949,7 +3949,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "amino-acid-shift",
+   "display_name": "env_bio",
    "language": "python",
    "name": "python3"
   },
@@ -3963,7 +3963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
